compiler/test/programs/syntax_error/conduit_node_id_duplicate.fl
<?xml version='1.0' encoding='UTF-8'?>
<fluir>
    <function name="main" id="1" x="1" y="5" z="3" w="100" h="100">
        <body>
            <binary id="3" x="35" y="3" z="2" w="5" h="5" operator="/"/>
            <constant id="2" x="9" y="12" z="10" w="12" h="5">
                <float>1.2345</float>
            </constant>
            <constant id="1" x="9" y="5" z="0" w="12" h="5">
                <float>6.7891</float>
            </constant>
            <unary id="6" x="35" y="12" z="0" w="5" h="5" operator="-"/>
            <conduit id="7" input="1">
                <output target="3" index="0"/>
            </conduit>
            <conduit id="8" input="2">
                <output target="3" index="1"/>
            </conduit>
            <conduit id="3" input="6">
                <output target="5" index="1"/>
            </conduit>
            <conduit id="11" input="2">
                <output target="6" index="0"/>
            </conduit>
            <conduit id="12" input="3">
                <output target="5" index="0"/>
            </conduit>
            <binary id="12" x="57" y="4" z="2" w="5" h="5" operator="*"/>
        </body>
    </function>
</fluir>
